[ADD] documentation for store
